# genomes-generation

./: .gitignore  .nf-core.yml  .prettierignore  README.md  Snakefile  bin_upload.sh  bin_upload_tsv.nf  lsf.yaml  main.nf  main_test.nf  modules.json  nextflow.config  nextflow_schema.json  nf-test.config  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
assets/: final_table_for_uploader.tsv  methods_description_template.yml  multiqc_config.yml  samplesheet_example.csv  schema_input.json  software.tsv  upload_readme.md
bin_upload/: README_BIN_UPLOAD_STEPS  mapping.sh
config/: base.config  codon.config  codon_dbs.config  codon_xlarge.config  dbs.config  example.config.yaml  local.config  modules.config  nf_codon.config  nf_codon_dbs.config  nf_codon_lsf.config  nf_codon_mock.config  nf_local.config  nf_modules.config
docs/: ena_readme.md  outputs_readme.md
download_data/: MAG-generation-pipeline-CODON-step1.sh  fetch_data.sh  fetch_data_lsf.sh  fetch_data_slurm.sh  generate_samplesheet.py  rename-erz.py
input_generation/: README.md  generate_inputs.py
lib/: WorkflowGenomesGeneration.groovy
modules/: BAT.nf  CAT.nf  align_bwa.nf  bam_to_fastq.nf  bedtools.nf  breadth_depth.nf  busco.nf  checkm.nf  checkm2.nf  cov_recycler.nf  decontamination.nf  detect_contamination.nf  detect_decontamination.nf  detect_rrna.nf  drep.nf  euk_final_qual.nf  euk_taxo.nf  eukcc.nf  fastp.nf  filter_qs50_euk.nf  gtdbtk.nf  gunc.nf  gunzip.nf  metawrap.nf  parse_checkm.nf  prepare_data.nf  prepare_input.nf  rename.nf  select_seqs.nf  utils.nf
rules/: binning.smk  (+4 more)
(+314 files in other folders)
