[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "genomes-generation"
version = "1.3.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "xmltodict>=0.13",
    "ena-api-libs @ git+https://github.com/EBI-Metagenomics/ena-api-handler.git",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "pytest-md==0.2.0",
    "pytest-workflow==2.1.0",
]

[tool.setuptools.packages.find]
include = ["bin*", "tests*"]